feat: update translations via @LingoDotDev

--- a/apps/web/public/static/locales/az/common.json
+++ b/apps/web/public/static/locales/az/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadata",
   "stats": "Statistika",
   "booking_status": "Rezervasiya statusu",
+  "unsupported_file_type": "{{type}} faylları şəkil kimi yüklənə bilməz",
+  "only_image_files_allowed": "Yalnız şəkil fayllarına icazə verilir",
+  "failed_to_validate_image_file": "Şəkil faylını doğrulamaq mümkün olmadı",
+  "invalid_image_file_format": "Yanlış şəkil fayl formatı",
+  "svg_contains_dangerous_content": "SVG potensial təhlükəli məzmun ehtiva edir",
+  "unrecognized_image_format": "Tanınmayan şəkil formatı və ya yanlış fayl",
+  "invalid_base64_format": "Yanlış base64 formatı",
+  "empty_image_data": "Boş şəkil məlumatı",
   "visit": "Ziyarət et",
   "location_custom_label_input_label": "Rezervasiya səhifəsində xüsusi etiket",
   "meeting_link": "Görüş linki",
