--- a/apps/web/public/static/locales/bg/common.json
+++ b/apps/web/public/static/locales/bg/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Метаданни",
   "stats": "Статистика",
   "booking_status": "Статус на резервацията",
+  "unsupported_file_type": "Файлове {{type}} не могат да бъдат качени като изображения",
+  "only_image_files_allowed": "Разрешени са само файлове с изображения",
+  "failed_to_validate_image_file": "Неуспешна валидация на файла с изображение",
+  "invalid_image_file_format": "Невалиден формат на файла с изображение",
+  "svg_contains_dangerous_content": "SVG съдържа потенциално опасно съдържание",
+  "unrecognized_image_format": "Неразпознат формат на изображението или невалиден файл",
+  "invalid_base64_format": "Невалиден base64 формат",
+  "empty_image_data": "Празни данни на изображението",
   "visit": "Посети",
   "location_custom_label_input_label": "Персонализиран етикет на страницата за резервация",
   "meeting_link": "Линк за среща",
