--- a/apps/web/public/static/locales/ca/common.json
+++ b/apps/web/public/static/locales/ca/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadades",
   "stats": "Estadístiques",
   "booking_status": "Estat de la reserva",
+  "unsupported_file_type": "Els fitxers {{type}} no es poden pujar com a imatges",
+  "only_image_files_allowed": "Només es permeten fitxers d'imatge",
+  "failed_to_validate_image_file": "No s'ha pogut validar el fitxer d'imatge",
+  "invalid_image_file_format": "Format de fitxer d'imatge no vàlid",
+  "svg_contains_dangerous_content": "L'SVG conté contingut potencialment perillós",
+  "unrecognized_image_format": "Format d'imatge no reconegut o fitxer no vàlid",
+  "invalid_base64_format": "Format base64 no vàlid",
+  "empty_image_data": "Dades d'imatge buides",
   "visit": "Visita",
   "location_custom_label_input_label": "Etiqueta personalitzada a la pàgina de reserva",
   "meeting_link": "Enllaç de la reunió",
