--- a/apps/web/public/static/locales/de/common.json
+++ b/apps/web/public/static/locales/de/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadaten",
   "stats": "Statistiken",
   "booking_status": "Buchungsstatus",
+  "unsupported_file_type": "{{type}}-Dateien können nicht als Bilder hochgeladen werden",
+  "only_image_files_allowed": "Es sind nur Bilddateien erlaubt",
+  "failed_to_validate_image_file": "Bilddatei konnte nicht validiert werden",
+  "invalid_image_file_format": "Ungültiges Bilddateiformat",
+  "svg_contains_dangerous_content": "SVG enthält potenziell gefährliche Inhalte",
+  "unrecognized_image_format": "Nicht erkanntes Bildformat oder ungültige Datei",
+  "invalid_base64_format": "Ungültiges Base64-Format",
+  "empty_image_data": "Leere Bilddaten",
   "visit": "Besuchen",
   "location_custom_label_input_label": "Benutzerdefinierte Bezeichnung auf der Buchungsseite",
   "meeting_link": "Meeting-Link",
