--- a/apps/web/public/static/locales/es-419/common.json
+++ b/apps/web/public/static/locales/es-419/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadatos",
   "stats": "Estadísticas",
   "booking_status": "Estado de la reserva",
+  "unsupported_file_type": "Los archivos {{type}} no se pueden cargar como imágenes",
+  "only_image_files_allowed": "Solo se permiten archivos de imagen",
+  "failed_to_validate_image_file": "No se pudo validar el archivo de imagen",
+  "invalid_image_file_format": "Formato de archivo de imagen no válido",
+  "svg_contains_dangerous_content": "El SVG contiene contenido potencialmente peligroso",
+  "unrecognized_image_format": "Formato de imagen no reconocido o archivo no válido",
+  "invalid_base64_format": "Formato base64 no válido",
+  "empty_image_data": "Datos de imagen vacíos",
   "visit": "Visitar",
   "location_custom_label_input_label": "Etiqueta personalizada en la página de reservas",
   "meeting_link": "Enlace de la reunión",
