--- a/apps/web/public/static/locales/fi/common.json
+++ b/apps/web/public/static/locales/fi/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metatiedot",
   "stats": "Tilastot",
   "booking_status": "Varauksen tila",
+  "unsupported_file_type": "{{type}}-tiedostoja ei voi ladata kuvina",
+  "only_image_files_allowed": "Vain kuvatiedostot ovat sallittuja",
+  "failed_to_validate_image_file": "Kuvatiedoston vahvistaminen epäonnistui",
+  "invalid_image_file_format": "Virheellinen kuvatiedostomuoto",
+  "svg_contains_dangerous_content": "SVG sisältää mahdollisesti vaarallista sisältöä",
+  "unrecognized_image_format": "Tunnistamaton kuvamuoto tai virheellinen tiedosto",
+  "invalid_base64_format": "Virheellinen base64-muoto",
+  "empty_image_data": "Tyhjä kuvadata",
   "visit": "Käynti",
   "location_custom_label_input_label": "Mukautettu nimike varaussivulla",
   "meeting_link": "Tapaamislinkki",
