--- a/apps/web/public/static/locales/ja/common.json
+++ b/apps/web/public/static/locales/ja/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "メタデータ",
   "stats": "統計",
   "booking_status": "予約状況",
+  "unsupported_file_type": "{{type}}ファイルは画像としてアップロードできません",
+  "only_image_files_allowed": "画像ファイルのみが許可されています",
+  "failed_to_validate_image_file": "画像ファイルの検証に失敗しました",
+  "invalid_image_file_format": "無効な画像ファイル形式です",
+  "svg_contains_dangerous_content": "SVGに潜在的に危険なコンテンツが含まれています",
+  "unrecognized_image_format": "認識できない画像形式または無効なファイルです",
+  "invalid_base64_format": "無効なbase64形式です",
+  "empty_image_data": "画像データが空です",
   "visit": "訪問",
   "location_custom_label_input_label": "予約ページのカスタムラベル",
   "meeting_link": "ミーティングリンク",
