--- a/apps/web/public/static/locales/ko/common.json
+++ b/apps/web/public/static/locales/ko/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "메타데이터",
   "stats": "통계",
   "booking_status": "예약 상태",
+  "unsupported_file_type": "{{type}} 파일은 이미지로 업로드할 수 없습니다",
+  "only_image_files_allowed": "이미지 파일만 허용됩니다",
+  "failed_to_validate_image_file": "이미지 파일 검증에 실패했습니다",
+  "invalid_image_file_format": "잘못된 이미지 파일 형식입니다",
+  "svg_contains_dangerous_content": "SVG에 잠재적으로 위험한 콘텐츠가 포함되어 있습니다",
+  "unrecognized_image_format": "인식할 수 없는 이미지 형식 또는 유효하지 않은 파일입니다",
+  "invalid_base64_format": "유효하지 않은 base64 형식입니다",
+  "empty_image_data": "이미지 데이터가 비어 있습니다",
   "visit": "방문",
   "location_custom_label_input_label": "예약 페이지의 커스텀 라벨",
   "meeting_link": "회의 링크",
