--- a/apps/web/public/static/locales/pl/common.json
+++ b/apps/web/public/static/locales/pl/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadane",
   "stats": "Statystyki",
   "booking_status": "Status rezerwacji",
+  "unsupported_file_type": "Pliki typu {{type}} nie mogą być przesyłane jako obrazy",
+  "only_image_files_allowed": "Dozwolone są tylko pliki graficzne",
+  "failed_to_validate_image_file": "Nie udało się zweryfikować pliku graficznego",
+  "invalid_image_file_format": "Nieprawidłowy format pliku graficznego",
+  "svg_contains_dangerous_content": "Plik SVG zawiera potencjalnie niebezpieczną zawartość",
+  "unrecognized_image_format": "Nierozpoznany format obrazu lub nieprawidłowy plik",
+  "invalid_base64_format": "Nieprawidłowy format base64",
+  "empty_image_data": "Puste dane obrazu",
   "visit": "Odwiedź",
   "location_custom_label_input_label": "Niestandardowa etykieta na stronie rezerwacji",
   "meeting_link": "Link do spotkania",
