--- a/apps/web/public/static/locales/pt/common.json
+++ b/apps/web/public/static/locales/pt/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadados",
   "stats": "Estatísticas",
   "booking_status": "Estado da reserva",
+  "unsupported_file_type": "Arquivos {{type}} não podem ser carregados como imagens",
+  "only_image_files_allowed": "Apenas arquivos de imagem são permitidos",
+  "failed_to_validate_image_file": "Falha ao validar arquivo de imagem",
+  "invalid_image_file_format": "Formato de arquivo de imagem inválido",
+  "svg_contains_dangerous_content": "SVG contém conteúdo potencialmente perigoso",
+  "unrecognized_image_format": "Formato de imagem não reconhecido ou arquivo inválido",
+  "invalid_base64_format": "Formato base64 inválido",
+  "empty_image_data": "Dados de imagem vazios",
   "visit": "Visitar",
   "location_custom_label_input_label": "Etiqueta personalizada na página de reserva",
   "meeting_link": "Link da reunião",
