--- a/apps/web/public/static/locales/ro/common.json
+++ b/apps/web/public/static/locales/ro/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadate",
   "stats": "Statistici",
   "booking_status": "Status rezervare",
+  "unsupported_file_type": "Fișierele de tip {{type}} nu pot fi încărcate ca imagini",
+  "only_image_files_allowed": "Sunt permise doar fișierele de tip imagine",
+  "failed_to_validate_image_file": "Nu s-a reușit validarea fișierului de imagine",
+  "invalid_image_file_format": "Format de fișier imagine invalid",
+  "svg_contains_dangerous_content": "Fișierul SVG conține conținut potențial periculos",
+  "unrecognized_image_format": "Format de imagine nerecunoscut sau fișier invalid",
+  "invalid_base64_format": "Format base64 invalid",
+  "empty_image_data": "Datele imaginii sunt goale",
   "visit": "Vizită",
   "location_custom_label_input_label": "Etichetă personalizată pe pagina de rezervare",
   "meeting_link": "Link întâlnire",
