--- a/apps/web/public/static/locales/ru/common.json
+++ b/apps/web/public/static/locales/ru/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Метаданные",
   "stats": "Статистика",
   "booking_status": "Статус бронирования",
+  "unsupported_file_type": "Файлы типа {{type}} не могут быть загружены как изображения",
+  "only_image_files_allowed": "Разрешены только файлы изображений",
+  "failed_to_validate_image_file": "Не удалось проверить файл изображения",
+  "invalid_image_file_format": "Недопустимый формат файла изображения",
+  "svg_contains_dangerous_content": "SVG содержит потенциально опасное содержимое",
+  "unrecognized_image_format": "Неопознанный формат изображения или недопустимый файл",
+  "invalid_base64_format": "Недопустимый формат base64",
+  "empty_image_data": "Пустые данные изображения",
   "visit": "Посетить",
   "location_custom_label_input_label": "Пользовательская метка на странице бронирования",
   "meeting_link": "Ссылка на встречу",
