--- a/apps/web/public/static/locales/tr/common.json
+++ b/apps/web/public/static/locales/tr/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Meta veriler",
   "stats": "İstatistikler",
   "booking_status": "Rezervasyon durumu",
+  "unsupported_file_type": "{{type}} dosyaları resim olarak yüklenemez",
+  "only_image_files_allowed": "Yalnızca resim dosyalarına izin verilir",
+  "failed_to_validate_image_file": "Resim dosyası doğrulanamadı",
+  "invalid_image_file_format": "Geçersiz resim dosyası formatı",
+  "svg_contains_dangerous_content": "SVG potansiyel olarak tehlikeli içerik barındırıyor",
+  "unrecognized_image_format": "Tanınmayan resim formatı veya geçersiz dosya",
+  "invalid_base64_format": "Geçersiz base64 formatı",
+  "empty_image_data": "Boş resim verisi",
   "visit": "Ziyaret et",
   "location_custom_label_input_label": "Rezervasyon sayfasında özel etiket",
   "meeting_link": "Toplantı bağlantısı",
