--- a/apps/web/public/static/locales/uk/common.json
+++ b/apps/web/public/static/locales/uk/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Метадані",
   "stats": "Статистика",
   "booking_status": "Статус бронювання",
+  "unsupported_file_type": "Файли {{type}} не можна завантажувати як зображення",
+  "only_image_files_allowed": "Дозволені лише файли зображень",
+  "failed_to_validate_image_file": "Не вдалося перевірити файл зображення",
+  "invalid_image_file_format": "Недійсний формат файлу зображення",
+  "svg_contains_dangerous_content": "SVG містить потенційно небезпечний вміст",
+  "unrecognized_image_format": "Нерозпізнаний формат зображення або недійсний файл",
+  "invalid_base64_format": "Недійсний формат base64",
+  "empty_image_data": "Порожні дані зображення",
   "visit": "Відвідати",
   "location_custom_label_input_label": "Власна мітка на сторінці бронювання",
   "meeting_link": "Посилання на зустріч",
