--- a/apps/web/public/static/locales/vi/common.json
+++ b/apps/web/public/static/locales/vi/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadata",
   "stats": "Thống kê",
   "booking_status": "Trạng thái đặt lịch",
+  "unsupported_file_type": "Không thể tải lên tệp {{type}} dưới dạng hình ảnh",
+  "only_image_files_allowed": "Chỉ cho phép tệp hình ảnh",
+  "failed_to_validate_image_file": "Không thể xác thực tệp hình ảnh",
+  "invalid_image_file_format": "Định dạng tệp hình ảnh không hợp lệ",
+  "svg_contains_dangerous_content": "SVG chứa nội dung có khả năng nguy hiểm",
+  "unrecognized_image_format": "Định dạng hình ảnh không được nhận dạng hoặc tệp không hợp lệ",
+  "invalid_base64_format": "Định dạng base64 không hợp lệ",
+  "empty_image_data": "Dữ liệu hình ảnh trống",
   "visit": "Truy cập",
   "location_custom_label_input_label": "Nhãn tùy chỉnh trên trang đặt lịch",
   "meeting_link": "Liên kết cuộc họp",
