--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "元数据",
   "stats": "统计",
   "booking_status": "预约状态",
+  "unsupported_file_type": "不支持上传 {{type}} 文件作为图片",
+  "only_image_files_allowed": "仅允许上传图片文件",
+  "failed_to_validate_image_file": "验证图片文件失败",
+  "invalid_image_file_format": "无效的图片文件格式",
+  "svg_contains_dangerous_content": "SVG 文件包含潜在危险内容",
+  "unrecognized_image_format": "无法识别的图片格式或无效文件",
+  "invalid_base64_format": "无效的 base64 格式",
+  "empty_image_data": "图片数据为空",
   "visit": "访问",
   "location_custom_label_input_label": "预约页面上的自定义标签",
   "meeting_link": "会议链接",
