--- a/apps/web/public/static/locales/et/common.json
+++ b/apps/web/public/static/locales/et/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metaandmed",
   "stats": "Statistika",
   "booking_status": "Broneeringu staatus",
+  "unsupported_file_type": "{{type}} faile ei saa üles laadida piltidena",
+  "only_image_files_allowed": "Lubatud on ainult pildifailid",
+  "failed_to_validate_image_file": "Pildifaili valideerimine ebaõnnestus",
+  "invalid_image_file_format": "Vigane pildifaili formaat",
+  "svg_contains_dangerous_content": "SVG sisaldab potentsiaalselt ohtlikku sisu",
+  "unrecognized_image_format": "Tundmatu pildiformaat või vigane fail",
+  "invalid_base64_format": "Vigane base64 formaat",
+  "empty_image_data": "Tühi pildifaili andmestik",
   "visit": "Külastus",
   "location_custom_label_input_label": "Kohandatud silt broneerimislehel",
   "meeting_link": "Koosoleku link",
