--- a/apps/web/public/static/locales/eu/common.json
+++ b/apps/web/public/static/locales/eu/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metadatuak",
   "stats": "Estatistikak",
   "booking_status": "Erreserba egoera",
+  "unsupported_file_type": "{{type}} fitxategiak ezin dira irudi gisa kargatu",
+  "only_image_files_allowed": "Irudi fitxategiak bakarrik onartzen dira",
+  "failed_to_validate_image_file": "Ezin izan da irudi fitxategia balioztatu",
+  "invalid_image_file_format": "Irudi fitxategiaren formatu baliogabea",
+  "svg_contains_dangerous_content": "SVG-ak potentzialki arriskutsua den edukia du",
+  "unrecognized_image_format": "Ezagutzen ez den irudi formatua edo fitxategi baliogabea",
+  "invalid_base64_format": "Base64 formatu baliogabea",
+  "empty_image_data": "Irudi datu hutsak",
   "visit": "Bisitatu",
   "location_custom_label_input_label": "Etiketa pertsonalizatua erreserba orrian",
   "meeting_link": "Bilera esteka",
