--- a/apps/web/public/static/locales/he/common.json
+++ b/apps/web/public/static/locales/he/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "מטא-נתונים",
   "stats": "סטטיסטיקות",
   "booking_status": "סטטוס הזמנה",
+  "unsupported_file_type": "לא ניתן להעלות קבצי {{type}} כתמונות",
+  "only_image_files_allowed": "מותר להעלות קבצי תמונה בלבד",
+  "failed_to_validate_image_file": "אימות קובץ התמונה נכשל",
+  "invalid_image_file_format": "פורמט קובץ תמונה לא חוקי",
+  "svg_contains_dangerous_content": "קובץ SVG מכיל תוכן שעלול להיות מסוכן",
+  "unrecognized_image_format": "פורמט תמונה לא מזוהה או קובץ לא חוקי",
+  "invalid_base64_format": "פורמט base64 לא חוקי",
+  "empty_image_data": "נתוני תמונה ריקים",
   "visit": "ביקור",
   "location_custom_label_input_label": "תווית מותאמת אישית בדף ההזמנה",
   "meeting_link": "קישור לפגישה",
