--- a/apps/web/public/static/locales/hu/common.json
+++ b/apps/web/public/static/locales/hu/common.json
@@ -3581,6 +3581,14 @@
   "webhook_metadata": "Metaadatok",
   "stats": "Statisztikák",
   "booking_status": "Foglalás állapota",
+  "unsupported_file_type": "{{type}} fájlokat nem lehet képként feltölteni",
+  "only_image_files_allowed": "Csak képfájlok engedélyezettek",
+  "failed_to_validate_image_file": "Nem sikerült ellenőrizni a képfájlt",
+  "invalid_image_file_format": "Érvénytelen képfájl formátum",
+  "svg_contains_dangerous_content": "Az SVG potenciálisan veszélyes tartalmat tartalmaz",
+  "unrecognized_image_format": "Felismerhetetlen képformátum vagy érvénytelen fájl",
+  "invalid_base64_format": "Érvénytelen base64 formátum",
+  "empty_image_data": "Üres képadat",
   "visit": "Látogatás",
   "location_custom_label_input_label": "Egyéni címke a foglalási oldalon",
   "meeting_link": "Találkozó link",
