--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1471,15 +1471,13 @@
   "error_removing_app": "Error removing app",
   "web_conference": "Web conference",
   "web_call": "Web call",
-  "web_call_test": "Web call test",
   "start_web_call": "Start web call",
   "end_call": "End call",
-  "end_and_close": "End call and close",
   "test_your_agent_with_web_call": "Test your agent with a web call without requiring a phone number",
   "phone_call": "Phone call",
   "connecting_to_agent": "Connecting to agent...",
-  "call_active_duration": "Call active - {{duration}}",
-  "call_ended_duration": "Call ended - Duration: {{duration}}",
+  "call_active": "Call active",
+  "call_ended": "Call ended",
   "call_error": "Call error",
   "ready_to_start_call": "Ready to start call",
   "failed_to_start_web_call_try_again": "Failed to start web call. Please try again.",
