--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3608,5 +3608,10 @@
   "consider_consolidating_multi_team_org": "Consider setting up an organization to unify billing, admin tools, and analytics across your teams.",
   "search_variables": "Search variables",
   "no_variables_found": "No variables found",
+  "credits_required": "Credits Required",
+  "web_call_credits_info": "Web calls consume credits. You have {{credits}} credits remaining.",
+  "web_call_no_credits": "Web calls require credits. You have 0 credits remaining.",
+  "purchase_credits": "Purchase Credits",
+  "credits_required_tooltip": "This action requires credits to proceed",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
