--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3595,7 +3595,7 @@
   "svg_contains_dangerous_content": "SVG contains potentially dangerous content",
   "unrecognized_image_format": "Unrecognized image format or invalid file",
   "invalid_base64_format": "Invalid base64 format",
-  "empty_image_data": "Empty image data",  
+  "empty_image_data": "Empty image data",
   "visit": "Visit",
   "location_custom_label_input_label": "Custom label on booking page",
   "meeting_link": "Meeting link",
@@ -3612,6 +3612,7 @@
   "search_variables": "Search variables",
   "no_variables_found": "No variables found",
   "api_key_name_too_long": "Name must not exceed {{max}} characters",
+  "auto_charge_for_last_minute_cancellation": "Auto charge no-show fee for last minute cancellations",
   "cancel_booking_acknowledge_no_show_fee": "I acknowledge that by cancelling the booking within {{timeValue}} {{timeUnit}} of the start time I will be charged the no show fee of {{amount, currency}}",
   "contact_organizer": "If you have any questions, please contact the organizer.",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
